# supreme-iped-research

./: .env.example  .env.production.example  .gitattributes  .gitignore  ABRIR_IPED_SUPREME.cmd  AUDITORIA_FINAL_E_LIMPEZA.md  AUDITORIA_PRODUCAO_READINESS.md  AUDITORIA_TECNICA_6_CAMADAS.md  BOOTSTRAP_SENTINELA.ps1  CRIAR_ATALHOS.ps1  DEPLOY.md  INSTALAR_PATCH_IPED.ps1  LAUNCHER_IPED.ps1  LEIA_PRIMEIRO_HANDOFF_FINAL_DEV.md  README.md  README_INSTALACAO.md  RELATORIO_CORRECAO_TESTE_SENTINELA.md  RELATORIO_CORRECOES_AUDITORIA_EXTERNA_V4.md  RELATORIO_MUDANCAS_PRODUCAO_ENTERPRISE.md  SIMULAR_IPED.ps1  SUBIR_LOCAL.ps1  docker-compose.local.yml  docker-compose.production.yml  docker-compose.staging.yml  docker-compose.test-clone.yml  fix_login.py
supreme-backend/: .env.example  .env.production.example  .env.staging.example  Dockerfile  apply_migration_003.bat  docker-compose.observability.yml  docker-compose.yml  pyproject.toml  start.bat
supreme-backend/src/app/: config.py  db.py  international.py  main.py  middleware.py  observability.py  queue.py  security.py
supreme-backend/src/app/api/: analytics.py  (+3 more)
supreme-backend/src/worker/: pipeline.py
supreme-backend/tests/: conftest.py  test_event_hash_identity.py  test_longitudinal_profile.py  test_phase2_form_security.py  test_phase3_determinism_and_versioning.py  test_phase4_scientific_validation.py  test_phase5_forensic_custody.py  test_psychometric_form_security.py  test_research_sanitization_guardrails.py  test_security_dependency.py  test_unified_ieo_math.py  test_unified_psi_math.py  test_unified_red_flags_math.py
(+862 files in other folders)
