[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "supreme-backend"
version = "4.0.0"
description = "SUPREME V4 - Backend analitico de exposicao ocupacional (IEO)"
requires-python = ">=3.11"

dependencies = [
    # API
    "fastapi>=0.111",
    "uvicorn[standard]>=0.29",
    "pydantic>=2.7",
    "pydantic-settings>=2.3",

    # Database
    "sqlalchemy[asyncio]>=2.0",
    "asyncpg>=0.29",

    # Queue
    "rq>=1.16",
    "redis>=5.0",

    # Utils
    "python-dotenv>=1.0",

    # Push para SENTINELA
    "httpx>=0.27",
    "prometheus-client>=0.20",
]

[project.optional-dependencies]
dev = [
    "pytest>=8",
    "pytest-asyncio>=0.23",
    "httpx>=0.27",
    "prometheus-client>=0.20",
    "pytest-cov>=5",
]
all = ["supreme-backend[dev]"]

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py311"
